name:                threadring
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable threadring
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , eta-fibers-dev
  default-language:    Haskell2010